Create & Update Owner closes #55