@@ -4,6 +4,7 @@ import guru.springframework.sfgpetclinic.model.Owner;
 import guru.springframework.sfgpetclinic.services.OwnerService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.test.web.servlet.MockMvc;
@@ -11,11 +12,13 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import static org.hamcrest.Matchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 class OwnerControllerTest {
@@ -33,7 +36,7 @@ class OwnerControllerTest {
     void setUp() {
         owners = new HashSet<>();
         owners.add(Owner.builder().id(1L).build());
-        owners.add(Owner.builder().id(2l).build());
+        owners.add(Owner.builder().id(2L).build());
 
         MockitoAnnotations.openMocks(this);
         controller = new OwnerController(ownerService);
@@ -66,7 +69,7 @@ class OwnerControllerTest {
         mockMvc.perform(get("/owners/1"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("owners/ownerdetails"))
-                .andExpect(model().attribute("owner", hasProperty("id", is(1l))));
+                .andExpect(model().attribute("owner", hasProperty("id", is(1L))));
 
         //then
         verify(ownerService, times(1)).findById(anyLong());
@@ -91,7 +94,7 @@ class OwnerControllerTest {
 
         Owner owner = Owner.builder().id(1L).lastName("Wes").build();
         when(ownerService.findAllByLastNameLike(anyString()))
-                .thenReturn(Arrays.asList(owner));
+                .thenReturn(List.of(owner));
         when(ownerService.findAll()).thenReturn(owners);
 
         mockMvc.perform(get("/owners").param("lastName", "Wes"))
@@ -102,6 +105,7 @@ class OwnerControllerTest {
 
     @Test
     void processFindFormReturnAll() throws Exception {
+
         when(ownerService.findAllByLastNameLike(null))
                 .thenReturn(Arrays.asList(Owner.builder().id(1L).build(),
                         Owner.builder().id(2L).build()));
@@ -111,6 +115,71 @@ class OwnerControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(view().name("owners/ownersList"))
                 .andExpect(model().attribute("selections", hasSize(2)));
+
+    }
+
+    @Test
+    void initCreationForm() throws Exception {
+
+        //when
+        mockMvc.perform(get("/owners/new"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("owners/createOrUpdateOwnerForm"))
+                .andExpect(model().attributeExists("owner"));
+
+        //then
+        verifyNoInteractions(ownerService);
+    }
+
+    @Test
+    void processCreationForm() throws Exception {
+
+        // given
+        when(ownerService.save(ArgumentMatchers.any())).thenReturn(Owner.builder().id(1L).build());
+
+        //when
+        mockMvc.perform(post("/owners/new"))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(view().name("redirect:/owners/1"))
+                .andExpect(model().attributeExists("owner"));
+
+        //then
+        verify(ownerService, times(1)).save(ArgumentMatchers.any());
+    }
+
+    @Test
+    void initUpdateOwnerForm() throws Exception {
+
+        // given
+        when(ownerService.findById(anyLong())).thenReturn(Owner.builder().id(1L).build());
+        when(ownerService.save(ArgumentMatchers.any())).thenReturn(Owner.builder().id(1L).build());
+
+        //when
+        mockMvc.perform(get("/owners/1/edit"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("owners/createOrUpdateOwnerForm"))
+                .andExpect(model().attributeExists("owner"));
+
+        //then
+        verify(ownerService, times(1)).findById(anyLong());
+        verify(ownerService, times(0)).save(ArgumentMatchers.any());
+
+    }
+
+    @Test
+    void processUpdateOwnerForm() throws Exception {
+
+        // given
+        when(ownerService.save(ArgumentMatchers.any())).thenReturn(Owner.builder().id(1L).build());
+
+        //when
+        mockMvc.perform(post("/owners/1/edit"))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(view().name("redirect:/owners/1"))
+                .andExpect(model().attributeExists("owner"));
+
+        //then
+        verify(ownerService, times(1)).save(ArgumentMatchers.any());
 
     }
 }
